# snix

./: .envrc  .mailmap  README.md  default.nix  prek.toml  rustfmt.toml
contrib/narinfo2parquet/: Cargo.nix  Cargo.toml  default.nix
contrib/narinfo2parquet/src/: main.rs
contrib/nix-language-test-suite/src/common/: Cargo.toml  lib.rs
contrib/nix-language-test-suite/src/snix/: Cargo.toml  build.rs  default.nix  skip.toml
contrib/weave/: Cargo.nix  Cargo.toml  default.nix
contrib/weave/src/: main.rs
fun/paroxysm/: Cargo.nix  Cargo.toml
snix/: Cargo.nix  Cargo.toml  TODO.md  clippy.toml  crate-hashes.json  default.nix  shell.nix  utils.nix
snix/boot/: README.md  default.nix  snix-init.go
snix/boot/tests/: default.nix
snix/build-glue/: Cargo.toml  default.nix
snix/build-glue/src/: build_state.rs  known_paths.rs  lib.rs
snix/build-glue/src/builder/: mod.rs  structured_attrs.rs
snix/build-glue/src/fetchers/: error.rs  mod.rs
snix/build-go/: build.pb.go  default.nix  rpc_build.pb.go  rpc_build_grpc.pb.go
snix/castore/: Cargo.toml  build.rs  default.nix
snix/castore-go/: castore.pb.go  castore_test.go  default.nix  rpc_blobstore.pb.go  rpc_blobstore_grpc.pb.go  rpc_directory.pb.go  rpc_directory_grpc.pb.go
snix/castore-http/: Cargo.toml
snix/castore-http/src/: app_state.rs  cli.rs  lib.rs  main.rs  router.rs  routes.rs
snix/castore/protos/: castore.proto  default.nix
snix/castore/src/: composition.rs  digests.rs  errors.rs  fixtures.rs  lib.rs  refscan.rs  tonic.rs  utils.rs
snix/castore/src/blobservice/: chunked_reader.rs  combinator.rs  from_addr.rs  grpc.rs  memory.rs  mod.rs  object_store.rs
snix/castore/src/directoryservice/: bigtable.rs  combinators.rs  directory_graph.rs  from_addr.rs  grpc.rs  memory.rs  mod.rs  object_store.rs  order_validator.rs  redb.rs  simple_putter.rs  traverse.rs  utils.rs
snix/castore/src/fs/: inode_tracker.rs  inodes.rs  mod.rs  root_nodes.rs  virtiofs.rs
snix/castore/src/import/: archive.rs  blobs.rs  error.rs  fs.rs  mod.rs
snix/castore/src/nodes/: directory.rs  mod.rs  symlink_target.rs
snix/castore/src/path/: mod.rs
snix/castore/src/proto/: grpc_blobservice_wrapper.rs  grpc_directoryservice_wrapper.rs  mod.rs  url.rs
snix/castore/src/tests/: import.rs
snix/cli/: Cargo.toml  README.md  default-cli.nix  default.nix  full-cli.nix  make-cli.nix  minimal-cli.nix  store-composition-cli.nix
snix/cli-eval/: Cargo.toml
snix/cli-eval/src/: args.rs  main.rs  repl.rs
snix/cli/base/: Cargo.toml  default.nix
snix/cli/base/src/: lib.rs
snix/cli/castore/: Cargo.toml  default.nix
snix/cli/castore-http/: Cargo.toml  default.nix
snix/cli/castore-http/src/: main.rs
snix/cli/castore/src/: main.rs
snix/cli/derivation-show/: Cargo.toml  default.nix
snix/cli/eval/: Cargo.toml  default.nix
snix/cli/eval/src/: args.rs  assignment.rs  lib.rs  main.rs
snix/cli/eval/tests/: repl.rs
snix/cli/nar-bridge/: Cargo.toml  default.nix
snix/cli/nar-bridge/src/: main.rs
snix/cli/nix-daemon/: Cargo.toml  default.nix
snix/cli/nix-daemon/src/: main.rs
snix/cli/nix-daemon/tests/: default.nix
snix/cli/src/: args.rs  lib.rs  main.rs  repl.rs
snix/cli/store/: Cargo.toml  default.nix
snix/cli/store/src/: main.rs
snix/cli/tests/: repl.rs
snix/docs/src/: SUMMARY.md  TODO.md  architecture.md  getting-started.md
snix/docs/src/castore/: store-configuration.md
snix/docs/src/eval/: builtins.md
snix/eval/: Cargo.toml  README.md  default.nix
snix/eval/benches/: eval.rs
snix/eval/builtin-macros/: Cargo.toml
snix/eval/builtin-macros/src/: lib.rs
snix/eval/src/: chunk.rs  errors.rs  io.rs  lib.rs  nix_search_path.rs  observer.rs  opcode.rs  pretty_ast.rs  upvalues.rs  warnings.rs
snix/eval/src/builtins/: impure.rs  mod.rs  to_xml.rs
snix/eval/src/compiler/: bindings.rs  import.rs  mod.rs  scope.rs
snix/eval/src/tests/: nix_tests.rs
snix/eval/src/value/: attrs.rs  function.rs  json.rs  mod.rs  thunk.rs
snix/eval/src/vm/: generators.rs  macros.rs  mod.rs
snix/eval/tests/: nix_oracle.rs
snix/glue/: Cargo.toml  default.nix
snix/glue/benches/: eval.rs
snix/glue/src/: fetchurl.rs  known_paths.rs  lib.rs  snix_build.rs  snix_io.rs  snix_store_io.rs
snix/glue/src/builder/: mod.rs
snix/glue/src/builtins/: derivation.rs  errors.rs  fetchers.rs  import.rs  mod.rs  utils.rs
snix/glue/src/fetchers/: decompression.rs  mod.rs
snix/glue/src/tests/: mod.rs
snix/nar-bridge/: Cargo.toml  default.nix
snix/nar-bridge/src/: lib.rs  nar.rs  narinfo.rs  outhash.rs
snix/nix-compat/: Cargo.toml  default.nix
snix/nix-compat-derive/: Cargo.toml
snix/nix-compat-derive-tests/: Cargo.toml  default.nix
snix/nix-compat-derive-tests/tests/ui/: deserialize_bad_type.stderr  deserialize_from_str_error_not_display.stderr  deserialize_from_str_missing.stderr  deserialize_try_from_error_not_display.stderr
snix/nix-compat-derive/src/: lib.rs
snix/nix-compat-derive/src/internal/: attrs.rs
snix/nix-compat/benches/: derivation_aterm.rs
snix/nix-compat/src/: hashing.rs  lib.rs  path_info.rs  structured_attrs.rs
snix/nix-compat/src/aterm/: escape.rs  mod.rs
snix/nix-compat/src/derivation/: errors.rs  mod.rs  output.rs  output_name.rs  outputs.rs  parse_error.rs  parser.rs  validate.rs  write.rs
snix/nix-compat/src/derived_path/: legacy.rs  mod.rs  output_spec.rs  path.rs
snix/nix-daemon/: Cargo.toml
snix/nix-daemon/src/: lib.rs
snix/nix-daemon/tests/: default.nix
snix/serde/: Cargo.toml
snix/serde/examples/: cfg-demo.rs  nixpkgs.rs
snix/serde/src/: de.rs  error.rs  lib.rs  ser.rs  ser_tests.rs
snix/store/: Cargo.toml  build.rs  default.nix
snix/store-go/: default.nix  pathinfo.pb.go  rpc_pathinfo.pb.go  rpc_pathinfo_grpc.pb.go
snix/store/protos/: default.nix  pathinfo.proto  rpc_pathinfo.proto
snix/store/src/: decompression.rs  fixtures.rs  import.rs  lib.rs  path_info.rs  utils.rs
snix/store/src/nar/: mod.rs  (+5 more)
snix/tracing/: Cargo.toml  default.nix
snix/tracing/src/: lib.rs
snix/verify-lang-tests/: default.nix
users/Profpatsch/my-tools/: default.nix  my-tools.cabal
(+669 files in other folders)
