# This Cargo file is a workspace configuration as per
# https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
#
# We add this file to get a coherent set of dependencies across Snix
# crates by sharing a Cargo.lock. This is necessary because of the
# currently limited support for Rust builds in Nix.
#
# Note that this explicitly does *not* mean that //snix should be
# considered "one project": This is simply a workaround for a
# technical limitation and it should be our aim to remove this
# workspace file and make the subprojects independent.
#
# Note also that CI targets for actual projects should *not* be tied
# to //snix, but to its subprojects. A potential file at
# //snix/default.nix should likely *not* expose anything other than
# extra steps or other auxiliary targets.

[workspace]
resolver = "3"

members = [
  "build",
  "castore",
  "castore-http",
  "cli/base",
  "cli/build",
  "cli/derivation-show",
  "cli/castore",
  "cli/castore-http",
  "cli/eval",
  "cli/nar-bridge",
  "cli/nix-daemon",
  "cli/store",
  "eval",
  "eval/builtin-macros",
  "glue",
  "nar-bridge",
  "nix-compat",
  "nix-compat-derive",
  "nix-compat-derive-tests",
  "nix-daemon",
  "serde",
  "store",
  "tracing",
]
metadata.crane.name = "snix"

[workspace.package]
# Default version
version = "0.1.0"

# This is the Minimum Supported Rust Version (MSRV):
# https://doc.rust-lang.org/cargo/reference/rust-version.html
# Update with the Rust version in the pinned
# (`../third_party/sources/sources.json`) Nixpkgs
rust-version = "1.94.1"

[workspace.dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.86"
async-compression = "0.4.42"
async-process = "2.2.4"
async-stream = "0.3.5"
aws-config = "1.8.15"
aws-credential-types = "1.2.14"
axum = "0.8.8"
axum-extra = "0.12.5"
axum-range = "1.0.0"
axum-tracing-opentelemetry = { version = "0.33.1", features = [
  "tracing_level_info",
] }
bigtable_rs = "0.3.0"
bitflags = "2.6.0"
blake3 = "1.5.4"
bstr = "1.10.0"
bytes = "1.7.1"
clap = "4.5.16"
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
count-write = "0.1.0"
criterion = "0.5"
data-encoding = "2.7.0"
digest = "0.10.7"
dirs = "4.0.0"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
erased-serde = "0.4.5"
expect-test = "1.5.0"
fastcdc = "3.1.0"
fuse-backend-rs = "=0.12.0"
futures = "0.3.30"
genawaiter = { version = "0.99.1", default-features = false }
googleapis-tonic-google-bigtable-v2 = "0.36.0"
hashbrown = "0.17.1"
hex-literal = "0.4.1"
http = "1.1.0"
hyper-util = "0.1.7"
itertools = "0.12.1"
lexical-core = "0.8.5"
libc = "0.2.158"
lru = "0.12.4"
md-5 = "0.10.6"
mimalloc = "0.1.43"
# https://github.com/asomers/mockall/pull/686, compatibility with the `#[auto_impl]` macro
mockall = { git = "https://github.com/asomers/mockall.git", rev = "2270cdb77897aeb55326ba730f1c1fc2131cc8e1" }
nix = "0.27.1"
nom = "8.0"
object_store = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry-instrumentation-tower = "0.17.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
os_str_bytes = "6.6"
parking_lot = "0.12.3"
path-clean = "0.1"
petgraph = "0.6.5"
pin-project = "1.1"
pin-project-lite = "0.2.14"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.86"
proptest = { version = "1.5.0", default-features = false }
prost = "0.14.3"
quote = "1.0.37"
redb = "4.0.0"
regex = "1.10.6"
reqwest = { version = "0.13.1", default-features = true }
reqwest-middleware = { version = "0.5.0", default-features = false }
reqwest-tracing = { version = "0.7.0", default-features = false }
rnix = "0.14.0"
# keep in sync with rnix
rowan = "0.16"
rstest = { version = "0.26.1", default-features = false }
rstest_reuse = "0.7.0"
rustc-hash = "2.0.0"
rustyline = "17.0.1"
serde = "1.0.209"
serde_json = "1.0"
serde_qs = "0.12.0"
serde_tagged = "0.3.0"
serde_with = { version = "3.9.0", default-features = false, features = [
  "macros",
  "std",
] }
sha1 = "0.10.6"
sha2 = "0.10.8"
smol_str = "0.2.2"
tabwriter = "1.4"
tempfile = "3.12.0"
test-strategy = "0.2.1"
thiserror = "2.0"
threadpool = "1.8.1"
tokio = "1.39.3"
tokio-listener = "0.5.2"
tokio-retry = "0.3.0"
tokio-stream = "0.1.15"
tokio-tar = { package = "astral-tokio-tar", version = "0.6.2" }
tokio-test = "0.4.4"
tokio-util = "0.7.11"
tonic = { version = "0.14.5", features = ["tls-aws-lc", "tls-native-roots"] }
tonic-health = { version = "0.14.5", default-features = false }
tonic-reflection = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tonic-tracing-opentelemetry = { version = "0.32.2", features = [
  "tracing_level_info",
] }
tower = "0.4.13"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-indicatif = "0.3.7"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
# https://github.com/NixOS/nixpkgs/pull/428369, tracy from nixpkgs can't open more recent traces
tracing-tracy = "=0.11.4"
trybuild = "1.0.99"
url = "2.5.2"
vhost = "=0.6.1"
vhost-user-backend = "=0.8.0"
virtio-bindings = "=0.2.6"
virtio-queue = "=0.7.1"
vm-memory = "=0.10.0"
vmm-sys-util = "=0.11.2"
vu128 = "1.1.0"
walkdir = "2.5.0"
which = "^8.0.0"
# https://github.com/jneem/wu-manber/pull/1
wu-manber = { git = "https://github.com/tvlfyi/wu-manber.git" }
xattr = "1.3.1"
zstd = "0.13.2"

# Add a profile to all targets that enables release optimisations, but
# retains debug symbols. This is great for use with
# benchmarking/profiling tools.
[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
hyper = { git = "https://github.com/arianvp/hyper.git", branch = "push-ktssyytnyrru" }
tonic = { git = "https://github.com/edef1c/tonic.git", branch = "push-rosuyzxnysvw" }
tonic-health = { git = "https://github.com/edef1c/tonic.git", branch = "push-rosuyzxnysvw" }
tonic-reflection = { git = "https://github.com/edef1c/tonic.git", branch = "push-rosuyzxnysvw" }
tonic-prost = { git = "https://github.com/edef1c/tonic.git", branch = "push-rosuyzxnysvw" }
tonic-prost-build = { git = "https://github.com/edef1c/tonic.git", branch = "push-rosuyzxnysvw" }
