[package]
name = "narinfo2parquet"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["."]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
mimalloc = "0.1.43"
nix-compat = { version = "0.1.0", path = "../../snix/nix-compat", default-features = false }
tempfile-fast = "0.3.4"
zstd = "0.13.0"

# See https://github.com/pola-rs/polars/issues/19157
hashbrown = { version = "0.14.5", features = ["raw"] }

[dependencies.polars]
version = "0.36.2"
default-features = false
features = ["parquet", "polars-io", "dtype-categorical"]
