[package]
name = "weave"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["."]

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
hashbrown = "0.17.1"
nix-compat = { version = "0.1.0", path = "../../snix/nix-compat", default-features = false }
safer_owning_ref = "0.5.0"
rayon = "1.8.1"
rustc-hash = "2.0.0"
snix-tracing = { version = "0.1.0", path = "../../snix/tracing" }
tracing = "0.1.40"
tracing-indicatif = "0.3.7"

[dependencies.polars]
version = "0.36.2"
features = ["parquet", "lazy", "streaming"]
