[package]
authors = ["eeeeeta <eta@theta.eu.org>"]
edition = "2018"
name = "paroxysm"
version = "0.1.0"

[dependencies]
chrono = "0.4"
config = "0.9"
crimp = { path = "../../net/crimp" }
env_logger = "0.7"
failure = "0.1"
irc = "0.13"
lazy_static = "1.4"
log = "0.4"
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", features = [ "derive" ] }

[dependencies.diesel]
features = [ "postgres", "chrono", "r2d2" ]
version = "1.4"

# Add bogus dependency on any version of pq-sys, so we can force the pkg-config
# flag since pg_config reports an incorrect libdir in pkgs.libpq
# https://github.com/NixOS/nixpkgs/pull/359659#issuecomment-2660995914
# https://github.com/NixOS/nixpkgs/pull/382380
# https://github.com/sgrif/pq-sys/issues/75
[dependencies.pq-sys]
features = [ "pkg-config" ]
version = "*"
