[package]
name = "snix-build-glue"
edition = "2024"
version.workspace = true
rust-version.workspace = true

[dependencies]
snix-build.path = "../build"
snix-castore.path = "../castore"
snix-store = { path = "../store", default-features = false, features = [] }
snix-tracing.path = "../tracing"
nix-compat.path = "../nix-compat"
async-stream.workspace = true
bstr.workspace = true
bytes.workspace = true
data-encoding.workspace = true
futures.workspace = true
hashbrown.workspace = true
md-5.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tracing.workspace = true
tracing-indicatif.workspace = true
url.workspace = true

[dev-dependencies]
hex-literal.workspace = true
rstest.workspace = true
serde.workspace = true
