[package]
name = "snix-castore-http"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["tracing"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-tracing-opentelemetry.workspace = true
axum-range.workspace = true
mime = "0.3.17"
mime_guess = "2.0.5"
path-clean.workspace = true
snix-castore.path = "../castore"
tokio-listener = { workspace = true, features = [
  "axum08",
  "clap",
  "multi-listener",
  "sd_listen",
] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
axum-test = "19.0.0"
blake3.workspace = true
tokio.workspace = true
tracing-test.workspace = true
