[package]
name = "nar-bridge"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http2"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-range.workspace = true
bytes.workspace = true
futures.workspace = true
lru.workspace = true
nix-compat = { path = "../nix-compat", features = ["async"] }
opentelemetry.workspace = true
opentelemetry-instrumentation-tower = { workspace = true, features = [
  "axum",
], optional = true }
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snix-castore = { path = "../castore" }
snix-store = { path = "../store" }
tokio.workspace = true
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tower-http = { workspace = true, features = ["compression-zstd", "trace"] }
tonic.workspace = true
tracing.workspace = true

[features]
default = []
otlp = ["dep:opentelemetry-instrumentation-tower"]

[dev-dependencies]
axum-test = "19.0.0"
data-encoding.workspace = true
prost.workspace = true
sha2.workspace = true
tracing-test.workspace = true

[package.metadata.docs.rs]
all-features = true
