[package]
name = "nix-daemon"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
nix-compat.path = "../nix-compat"
snix-castore.path = "../castore"
snix-store.path = "../store"
tokio = { workspace = true }
tracing.workspace = true

[package.metadata.docs.rs]
all-features = true
