[package]
name = "snix-store"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-compression = { workspace = true, features = [
  "tokio",
  "bzip2",
  "gzip",
  "xz",
  "zstd",
] }
async-stream.workspace = true
blake3 = { workspace = true, features = ["rayon", "std"] }
bstr.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
count-write.workspace = true
data-encoding.workspace = true
ed25519.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
nix-compat = { path = "../nix-compat", features = ["async", "serde"] }
pin-project-lite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
serde_qs.workspace = true
sha1.workspace = true
sha2.workspace = true
md-5.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
tokio-stream = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
snix-castore = { path = "../castore" }
url = { workspace = true, features = ["serde"] }
walkdir.workspace = true
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware.workspace = true
lru.workspace = true
parking_lot.workspace = true
snix-tracing = { path = "../tracing", features = ["clap", "reqwest", "tonic"] }
snix-cli.path = "../cli/base"
tracing.workspace = true
tracing-indicatif.workspace = true
hyper-util.workspace = true
toml = { version = "0.8.19", optional = true }
tonic-health.workspace = true
redb = { workspace = true, features = ["logging"] }
mimalloc.workspace = true
tonic-reflection = { workspace = true, optional = true }
bigtable_rs = { workspace = true, optional = true }
auto_impl = "1.2.0"

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
async-process.workspace = true
fuse-backend-rs.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
tempfile.workspace = true
tokio-retry.workspace = true
hex-literal.workspace = true

[features]
default = ["cloud", "fuse", "tonic-reflection"]
cloud = ["dep:bigtable_rs", "snix-castore/cloud"]
fuse = ["snix-castore/fuse"]
tonic-reflection = ["dep:tonic-reflection", "snix-castore/tonic-reflection"]
virtiofs = ["snix-castore/virtiofs"]
xp-composition-cli = [
  "toml",
  "snix-castore/xp-composition-url-refs",
  "snix-castore/xp-composition-cli",
]
# Whether to run the integration tests.
# Requires the following packages in $PATH:
# cbtemulator, google-cloud-bigtable-tool
integration = []

[package.metadata.docs.rs]
# Everything but virtiofs since that doesn't build on MacOS
features = ["cloud", "fuse", "tonic-reflection", "xp-composition-cli"]
