[package]
name = "snix-store"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
async-compression = { workspace = true, features = [
  "tokio",
  "bzip2",
  "gzip",
  "xz",
  "zstd",
] }
async-stream.workspace = true
bstr.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
count-write.workspace = true
data-encoding.workspace = true
ed25519.workspace = true
futures.workspace = true
nix-compat = { path = "../nix-compat", features = ["async", "serde"] }
pin-project.workspace = true
pin-project-lite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
serde_qs.workspace = true
sha1.workspace = true
sha2.workspace = true
md-5.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
tokio-stream = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true
snix-castore = { path = "../castore" }
url = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware.workspace = true
lru.workspace = true
snix-tracing = { path = "../tracing", features = ["clap", "reqwest", "tonic"] }
tracing.workspace = true
tracing-indicatif.workspace = true
hyper-util.workspace = true
toml = { version = "0.8.19", optional = true }
redb = { workspace = true, features = ["logging"] }
bigtable_rs = { workspace = true, optional = true }
googleapis-tonic-google-bigtable-v2 = { workspace = true, optional = true }
auto_impl = "1.2.0"

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
async-process.workspace = true
fuse-backend-rs.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
tempfile.workspace = true
tokio-retry.workspace = true
tokio-tar.workspace = true
hex-literal.workspace = true

[features]
default = ["cloud", "fuse"]
cloud = [
  "dep:bigtable_rs",
  "dep:googleapis-tonic-google-bigtable-v2",
  "snix-castore/cloud",
]
fuse = ["snix-castore/fuse"]
virtiofs = ["snix-castore/virtiofs"]
xp-composition-cli = [
  "toml",
  "snix-castore/xp-composition-url-refs",
  "snix-castore/xp-composition-cli",
]
# Whether to run the integration tests.
# Requires the following packages in $PATH:
# cbtemulator, google-cloud-bigtable-tool
integration = []

[package.metadata.docs.rs]
# Everything but virtiofs since that doesn't build on MacOS
features = ["cloud", "fuse", "xp-composition-cli"]

[package.metadata.cargo-machete]
ignored = ["md-5", "tonic-prost"]
