[package]
name = "snix-tracing"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
clap = { workspace = true, optional = true, features = ["derive"] }
enumset = { version = "1.1.0", optional = true }
tracing = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_debug",
] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-indicatif.workspace = true
tokio = { workspace = true, features = ["macros", "signal", "sync", "rt"] }
thiserror.workspace = true

tracing-chrome = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, features = [
  "grpc-tonic",
], optional = true }
opentelemetry_sdk = { workspace = true, features = [
  "rt-tokio",
], optional = true }
tracing-tracy = { workspace = true, features = [
  "flush-on-exit",
], optional = true }
opentelemetry-http = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }

tonic = { workspace = true, optional = true }
http = { workspace = true, optional = true }

reqwest-tracing = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
clap-verbosity-flag = { version = "3.0.4", optional = true, default-features = false, features = [
  "tracing",
] }

[features]
default = []
chrome = ["dep:enumset", "dep:tracing-chrome"]
clap = ["dep:clap", "dep:clap-verbosity-flag"]
otlp = [
  "dep:enumset",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-http",
  "dep:opentelemetry-semantic-conventions",
  "reqwest-tracing?/opentelemetry_0_30",
]
tracy = ["dep:enumset", "dep:tracing-tracy"]
tonic = ["dep:tonic", "dep:http"]
reqwest = ["dep:reqwest-tracing"]
axum = ["dep:axum"]

[package.metadata.docs.rs]
all-features = true
