[package]
name = "snix-cli-eval"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[[bin]]
name = "snix-eval"
path = "src/main.rs"

[dependencies]
snix-build = { path = "../../build" }
snix-store = { path = "../../store", default-features = false, features = [] }
snix-eval = { path = "../../eval" }
snix-glue = { path = "../../glue" }
snix-tracing = { path = "../../tracing" }
clap = { workspace = true, features = ["derive", "env", "cargo", "string"] }
dirs.workspace = true
rustyline.workspace = true
rnix.workspace = true
smol_str.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
rustc-hash.workspace = true
mimalloc = { workspace = true, optional = true }
url.workspace = true

[dev-dependencies]
expect-test.workspace = true

[features]
default = ["otlp", "mimalloc"]
mimalloc = ["dep:mimalloc"]
otlp = ["snix-tracing/otlp"]
tracing-chrome = ["snix-tracing/chrome"]
tracing-tracy = ["snix-tracing/tracy"]
xp-store-composition-cli = ["snix-store/xp-composition-cli"]

[package.metadata.docs.rs]
all-features = true
