[package]
name = "nix-language-test-suite-common"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
knus = "3.3.1"
nix = { version = "0.31.3", features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
tempfile = "3.27.0"

[dev-dependencies]
rstest.workspace = true
