[package]
name = "nix-language-test-suite-snix"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
rstest.workspace = true
nix-language-test-suite-common = { path = "../common" }
serde.workspace = true
toml.workspace = true
pretty_assertions.workspace = true
snix-eval = { path = "../../../../snix/eval" }
snix-glue = { path = "../../../../snix/glue" }
snix-build = { path = "../../../../snix/build", default-features = false }
snix-store = { path = "../../../../snix/store", default-features = false }
nix-compat = { path = "../../../../snix/nix-compat" }
clap = "4.6.1"

[dependencies]
tokio = "1.52.3"
